--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ h1 {
 }
 
 #game-over,
-#win-msg {
+#win-msg,
+#word-length {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,7 +73,8 @@ h1 {
 }
 
 #game-over.show,
-#win-msg.show {
+#win-msg.show,
+#word-length.show {
     pointer-events: auto;
     opacity: 1;
 }
