--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,6 @@ body {
     width: 100vw;
     margin: 0;
     background-color: rgb(238, 238, 238);
-}
-
-h1 {
-    font-family: "Quicksand", sans-serif;
-}
-
-#rules {
-    text-align: center;
     font-family: "Quicksand", sans-serif;
 }
 
@@ -45,7 +37,6 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Quicksand", sans-serif;
 }
 
 #input-area {
@@ -55,21 +46,15 @@ h1 {
     align-items: center;
 }
 
-#rules {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    opacity: 1;
-    /* pointer-events: none; */
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.3);
-    transition: opacity 1.5s ease;
+#user-guess {
+    font-size: 16px;
+    padding: 10px 25px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+#rules,
 #game-over,
 #win-msg,
 #word-length {
@@ -77,14 +62,33 @@ h1 {
     justify-content: center;
     align-items: center;
     position: fixed;
-    opacity: 0;
-    pointer-events: none;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.3);
     transition: opacity 1.2s ease;
+}
+
+#rules {
+    opacity: 1;
+    /* pointer-events: none; */
+    text-align: center;
+}
+
+li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+
+}
+
+#game-over,
+#win-msg,
+#word-length {
+    opacity: 0;
+    pointer-events: none;
 }
 
 #game-over.show,
@@ -102,7 +106,6 @@ h1 {
     padding: 50px 50px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     background-color: #fff;
-    font-family: "Quicksand", sans-serif;
 }
 
 .modal h3 {
@@ -121,8 +124,8 @@ h1 {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     color: #ffffff;
-    background-color: #47a386;
-    font-size: 14px;
+    background-color: #34A0A4;
+    font-size: 16px;
     padding: 10px 25px;
 }
 
@@ -132,6 +135,6 @@ h1 {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     color: #ffffff;
     background-color: #3e4543;
-    font-size: 14px;
+    font-size: 16px;
     padding: 10px 25px;
 }
