--- a/css/style.css
+++ b/css/style.css
@@ -72,16 +72,34 @@ body {
 
 #rules {
     opacity: 1;
-    /* pointer-events: none; */
     text-align: center;
 }
 
+ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0;
+    width: auto;
+}
+
 li {
+    display: inline;
+    vertical-align: middle;
+}
+
+img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.color-case {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: left;
-
+    margin-bottom: 10px;
 }
 
 #game-over,
@@ -96,6 +114,20 @@ li {
 #word-length.show {
     pointer-events: auto;
     opacity: 1;
+}
+
+.modal-rules {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    max-width: 100%;
+    border-radius: 5px;
+    text-align: center;
+    padding: 50px 50px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
 }
 
 .modal {
@@ -127,6 +159,7 @@ li {
     background-color: #34A0A4;
     font-size: 16px;
     padding: 10px 25px;
+    margin-top: 10px;
 }
 
 #reset-button {
